# SPDX-License-Identifier: Apache-2.0
# Additive //roamux/app — the Roamux.app bundle surface (E6). roam-32: Sparkle
# auto-update integration behind roamux_enable_sparkle (plan §13.6/K4).

import("//build/buildflag_header.gni")
import("//roamux/build/buildflags.gni")

buildflag_header("app_buildflags") {
  header = "app_buildflags.h"
  flags = [ "ROAMUX_ENABLE_SPARKLE=$roamux_enable_sparkle" ]
}

# The Ed25519 appcast verifier is flag-independent: I-6.3's release pipeline
# validation and the fixture tests use it in every build shape.
source_set("appcast_verifier") {
  sources = [
    "appcast_verifier.cc",
    "appcast_verifier.h",
  ]
  deps = [
    "//base",
    "//third_party/boringssl",
  ]
}

# Link-clean by design (roam-118): patch 0025 deps this group from the chrome app-bundle
# target — the main-executable STUB — and chrome's verify_dynamic_libraries forbids the stub
# linking anything beyond its allowlist. Only link-inert targets belong here (bundle_data,
# generated headers). Link-bearing surfaces attach to their linking targets directly:
# :sparkle_updater via //chrome/browser (patch 0025), :appcast_verifier via its
# test/pipeline consumers (//roamux:roamux_unittests).
group("app") {
  public_deps = [ ":app_buildflags" ]
  if (roamux_enable_sparkle) {
    deps = [ ":sparkle_framework" ]
  }
}

if (roamux_enable_sparkle) {
  sparkle_root = "//roamux/third_party/sparkle"

  # Fail loudly at build time (plan R16 / roam-32 review): flag-on builds
  # require the hash-pinned vendor step first; the action names it.
  action("check_sparkle_vendored") {
    script = "//roamux/build/check_sparkle_vendored.py"
    inputs = []
    outputs = [ "$target_gen_dir/sparkle_vendored.stamp" ]
    args = [
      rebase_path(sparkle_root, root_build_dir),
      rebase_path(outputs[0], root_build_dir),
    ]
  }

  # The whole .framework directory is one opaque bundle input — tar/GN/copy
  # must preserve its symlink layout (Sparkle deltas + codesign break flat).
  bundle_data("sparkle_framework") {
    sources = [ "$sparkle_root/Sparkle.framework" ]
    outputs = [ "{{bundle_contents_dir}}/Frameworks/{{source_file_part}}" ]
    deps = [ ":check_sparkle_vendored" ]
  }

  config("sparkle_link") {
    framework_dirs = [ sparkle_root ]
    frameworks = [ "Sparkle.framework" ]
    # The bundle copies Sparkle into Contents/Frameworks; the executable and
    # the framework that links it resolve via the standard Chromium rpaths.
    ldflags = [ "-Wl,-rpath,@loader_path/../Frameworks" ]
  }

  # Obj-C++ updater surface, compiled only when the flag is on. The
  # app_controller / menu patch hunks (patch 0025) are themselves guarded by
  # BUILDFLAG(ROAMUX_ENABLE_SPARKLE).
  source_set("sparkle_updater") {
    sources = [
      "roamux_sparkle_updater.h",
      "roamux_sparkle_updater.mm",
    ]
    configs += [ ":sparkle_link" ]
    deps = [
      ":app_buildflags",
      ":check_sparkle_vendored",
      "//base",
    ]
    frameworks = [ "AppKit.framework" ]
  }

  # Test-executable consumers load the framework from the vendored source
  # tree (the app bundle uses @loader_path/../Frameworks instead).
  config("sparkle_test_rpath") {
    # Absolute: dyld does not resolve relative LC_RPATHs against cwd.
    ldflags = [ "-Wl,-rpath," + rebase_path(sparkle_root) ]
  }
}
