# SPDX-License-Identifier: Apache-2.0
# Additive //roamux/mojom — the first Roamux mojom surface (roam-85).

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "update_page.mojom" ]

  # roam-37: emit WebUI TypeScript bindings (update_page.mojom-webui.ts) for the
  # update card. Originally the chrome://roamux-about page; the card moved to
  # chrome://settings/help (roam-140). Page-local module path.
  webui_module_path = "/"
}
