# SPDX-License-Identifier: Apache-2.0
# roam-91: the roamex:// scheme alias — curated roamex://<host> → chrome://<host>
# forward rewrite (flag-gated by kRoamexSchemeAlias). Additive //roamex; hooked
# upstream only via declared patch 0028 (plan §12.2).

source_set("scheme") {
  sources = [
    "roamex_scheme_rewrite.cc",
    "roamex_scheme_rewrite.h",
  ]
  deps = [
    "//base",
    "//content/public/common",
    "//roamex/common",
    "//url",
  ]
}
