# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/browser/signin — the §12.3 build-state machinery (roam-4). E5 consumes this.

import("//build/buildflag_header.gni")
import("//roamex/build/buildflags.gni")

buildflag_header("signin_buildflags") {
  header = "signin_buildflags.h"
  flags = [ "ROAMEX_SIGNIN_AUTHORIZED_BUILD=$roamex_signin_authorized_build" ]
}

source_set("signin") {
  sources = [
    "roamex_signin_build_state.cc",
    "roamex_signin_build_state.h",
    "signin_surfaces.cc",
    "signin_surfaces.h",
  ]
  public_deps = [ ":signin_buildflags" ]
  deps = [
    "//base",
    "//components/prefs",
    "//components/signin/public/base",
    "//google_apis",
    "//roamex/common",
  ]
}
