# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/browser/tabs — E2 durable-tab-uid substrate (roam-10). The pure registry lives
# here (no //chrome deps); the chrome-facing helper/factory files in this directory are compiled
# INTO the upstream tab target via patch 0009's `sources +=` (they need Profile/SessionService),
# keeping GN acyclic — the roam-8 precedent family.

source_set("tabs") {
  sources = [
    "tab_uid_service.cc",
    "tab_uid_service.h",
  ]
  deps = [
    "//base",
    "//components/keyed_service/core",
    "//components/sessions",
  ]
}
