# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/browser/updates — the update state machine + service (E6,
# roam-85). The pure state machine is a low target (no Sparkle/Chrome); the
# ObjC++ service/factory are compiled into the upstream browser target via
# patch 0026.

source_set("update_state_machine") {
  sources = [
    "update_state_machine.cc",
    "update_state_machine.h",
  ]
  deps = [ "//base" ]
}

# Test doubles for the update-page Mojo (roam-85); roam-37's WebUI tests reuse.
source_set("test_support") {
  testonly = true
  sources = [
    "fake_update_page_handler.cc",
    "fake_update_page_handler.h",
  ]
  public_deps = [
    ":update_state_machine",
    "//roamex/mojom",
  ]
  deps = [ "//mojo/public/cpp/bindings" ]
}
