# SPDX-License-Identifier: Apache-2.0
# Additive //roamux/browser/profiles — Brave-style name-only profile creation (E5, roam-29).

source_set("profiles") {
  sources = [
    "brave_style_profiles.cc",
    "brave_style_profiles.h",
    "external_open_profile.cc",
    "external_open_profile.h",
  ]
  deps = [
    "//base",
    "//components/prefs",
    "//roamux/common",
  ]
}
