# SPDX-License-Identifier: Apache-2.0
# roam-91: the roamux:// scheme alias — curated roamux://<host> → chrome://<host>
# forward rewrite (flag-gated by kRoamuxSchemeAlias). Additive //roamux; hooked
# upstream only via declared patch 0028 (plan §12.2).

source_set("scheme") {
  sources = [
    "roamux_scheme_rewrite.cc",
    "roamux_scheme_rewrite.h",
  ]
  deps = [
    "//base",
    "//content/public/common",
    "//roamux/common",
    "//url",
  ]
}
