# SPDX-License-Identifier: Apache-2.0
# Additive //roamux/browser/updates — the update state machine + service (E6,
# roam-85). The pure state machine is a low target (no Sparkle/Chrome); the
# ObjC++ service/factory live in the flag-gated :update_service source_set
# (roam-140: extracted from patch 0026's inline `sources +=` block so the
# settings SettingsUI Mojo binder can depend on it as a real GN target).

import("//roamux/build/buildflags.gni")

source_set("update_state_machine") {
  sources = [
    "update_state_machine.cc",
    "update_state_machine.h",
  ]
  deps = [ "//base" ]
}

# Test doubles for the update-page Mojo (roam-85); roam-37's WebUI tests reuse.
source_set("test_support") {
  testonly = true
  sources = [
    "fake_update_page_handler.cc",
    "fake_update_page_handler.h",
  ]
  public_deps = [
    ":update_state_machine",
    "//roamux/mojom",
  ]
  deps = [ "//mojo/public/cpp/bindings" ]
}

# roam-140 (B0): the per-profile RoamuxUpdateService + its factory — the facade
# over the ONE process-wide Sparkle owner. Extracted from patch 0026's inline
# `sources +=` on chrome/browser/profiles:profiles_extra_parts_impl so both that
# target (KeyedService registration) and chrome/browser/ui's SettingsUI (Mojo
# binder) can dep it. ObjC++ + Sparkle-linked; flag-on only. Carries the same
# deps/config the old inline block used, plus //chrome/browser/profiles:profile
# (which the inline block got for free from its host target), and MINUS the old
# //roamux/app:sparkle_updater dep — the service no longer references
# roamux/app (the menu-routing seam is retired), and dropping it keeps
# //roamux/app:sparkle_updater -> :update_service (InitSparkleUpdater's shared
# owner accessor, roam-140) acyclic.
if (roamux_enable_sparkle) {
  source_set("update_service") {
    sources = [
      "roamux_update_service.h",
      "roamux_update_service.mm",
      "roamux_update_service_factory.cc",
      "roamux_update_service_factory.h",
    ]
    deps = [
      "//chrome/browser/profiles:profile",
      "//mojo/public/cpp/bindings",
      "//roamux/mojom",
      ":update_state_machine",
    ]
    configs += [ "//roamux/app:sparkle_link" ]
    frameworks = [ "AppKit.framework" ]
  }
}
