# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/browser/ui/tabs — E1 tab-strip position UI glue (roam-6). Deliberately has NO
# //chrome deps (patch 0005's call site passes the PrefService in) so the patched
# //chrome/browser/ui/tabs target can depend on this without a GN cycle (patch-0004 precedent).

source_set("tabs") {
  sources = [
    "tab_strip_placement_observer.cc",
    "tab_strip_placement_observer.h",
    "tab_strip_position_menu.cc",
    "tab_strip_position_menu.h",
  ]
  deps = [
    "//base",
    "//components/prefs",
    "//roamex/common",
    "//ui/base",
    "//ui/menus",
  ]
}
