# SPDX-License-Identifier: Apache-2.0
# roam-140/roam-160: the Roamux About static assets — roamux_logo.svg (the
# About hero) and roamux_glyph.svg (the left-nav chip, roam-157; also the
# source of truth for the theme/dark-logo renders, roam-158/169). A plain
# generate_grd bundle the settings grd merges (extra_grdp_deps) and serves
# under chrome://settings/roamux_about/*. Static-assets-only: roam-160 retired
# the <roamux-update-card> element (and its browser_proxy + mojo bindings +
# build_webui TS pipeline) — updates render in the NATIVE About row via the
# Sparkle-backed RoamuxVersionUpdater (//roamux/browser/updates).

import("//ui/webui/resources/tools/generate_grd.gni")

generate_grd("build_grdp") {
  grd_prefix = "roamux_settings_about"
  out_grd = "$target_gen_dir/resources.grdp"
  input_files = [
    "roamux_glyph.svg",
    "roamux_logo.svg",
  ]
  input_files_base_dir = rebase_path(".", "//")
  resource_path_prefix = "roamux_about"
}
