# SPDX-License-Identifier: Apache-2.0
import("//chrome/test/data/webui/build_webui_tests.gni")

build_webui_tests("build") {
  cc_test_files = [ "roamex_about_browsertest.cc" ]

  files = [ "about_test.ts" ]

  # Outside //chrome/test/data/webui the default prefix is the ../../../…
  # relative path, which grit mangles into an invalid C macro in the resource
  # map — and roamex_about_browsertest.cc already loads
  # "roamex_about/about_test.js" (roam-91 unbreak of the roam-37 wiring).
  resource_path_prefix = "roamex_about"

  ts_path_mappings = [
    "chrome://roamux-about/strings.m.js|" +
        rebase_path("//tools/typescript/definitions/strings.d.ts",
                    target_gen_dir),
    "chrome://roamux-about/*|" +
        rebase_path("$root_gen_dir/roamex/app/resources/about/tsc/*",
                    target_gen_dir),
  ]

  ts_deps = [
    "//roamex/app/resources/about:build_ts",
    "//ui/webui/resources/js:build_ts",  # roam-93: loadTimeData in the test
  ]
}
