# SPDX-License-Identifier: Apache-2.0
# roam-140: WebUI tests for the relocated <roamux-update-card> element and the
# branded chrome://settings/help About page. Wired into //chrome/test/data/webui
# by patch 0033 (replacing the retired roam-37 wiring that lived in patch 0027).
import("//chrome/test/data/webui/build_webui_tests.gni")

build_webui_tests("build") {
  cc_test_files = [ "roamux_settings_about_browsertest.cc" ]

  files = [
    "roamux_update_card_test.ts",
    "roamux_settings_about_test.ts",
  ]

  # Outside //chrome/test/data/webui the default prefix is the ../../../…
  # relative path, which grit mangles into an invalid C macro in the resource
  # map — and the browsertest loads "roamux_settings_about/*.js".
  resource_path_prefix = "roamux_settings_about"

  ts_path_mappings = [
    # The relocated element, served (once its grdp is merged) under
    # chrome://settings/roamux_about/*.
    "chrome://settings/roamux_about/strings.m.js|" +
        rebase_path("//tools/typescript/definitions/strings.d.ts",
                    target_gen_dir),
    "chrome://settings/roamux_about/*|" +
        rebase_path("$root_gen_dir/roamux/app/resources/settings_about/tsc/*",
                    target_gen_dir),
    # The native settings bundle, for the about_page integration suite
    # (imports chrome://settings/settings.js).
    "chrome://settings/strings.m.js|" +
        rebase_path("//tools/typescript/definitions/strings.d.ts",
                    target_gen_dir),
    "chrome://settings/*|" +
        rebase_path("$root_gen_dir/chrome/browser/resources/settings/tsc/*",
                    target_gen_dir),
  ]

  ts_deps = [
    "//chrome/browser/resources/settings:build_ts",
    "//roamux/app/resources/settings_about:build_ts",
    "//ui/webui/resources/js:build_ts",  # loadTimeData in the tests
  ]
}
